--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <!-- Head Section -->
   <div class="row">
     <!-- Navbar Section -->
-    <div class="col-md-12 px-4">
-      <img class="text-start mt-3" src="assets/Logo-church.svg" alt="Logo Church">
+    <div class="col-md-12 px-4 text-center text-md-start">
+      <img class="mt-3" src="assets/Logo-church.svg" alt="Logo Church">
     </div>
     <!-- Header Section -->
     <div class="col-md-12">
@@ -24,7 +24,7 @@
         <h2 class="text-center">Para comenzar la búsqueda, copie y pegue la URL del video de Youtube.
           <br>Por ej: <span class="url-color">https://www.youtube.com/watch?v=xxxxxxxx</span>
         </h2>
-        <div class="d-flex flex-row align-items-center gap-3">
+        <div class="d-flex flex-column flex-lg-row align-items-center gap-3">
           <input class="input-search" type="text" [(ngModel)]="videoId" placeholder="Ingresa la URL del video"/>
           <button class="btn-search" (click)="onCheckVideo()">Verificar <img class="ms-1" style="width: 0.5rem;" src="assets/Icons/chevron-arrow-right.svg" alt="Arrow Icon"></button>
         </div>
@@ -99,8 +99,8 @@
     <div class="col-md-12">
       <footer>
         <div class="copyrights-text d-flex flex-row align-items-center justify-content-center gap-5 py-3">
-          <p class="m-0">Develope by <a class="link-footer" href="https://nermportfolio.vercel.app" target="_blank">Nerm Developer</a></p>
-          <p class="m-0">©{{ currentYear }} Todos los derechos reservados.</p>
+          <p class="m-0 text-start text-md-left">Develope by <a class="link-footer" href="https://nermportfolio.vercel.app" target="_blank">Nerm Developer</a></p>
+          <p class="m-0 text-end text-md-center">©{{ currentYear }} Todos los derechos reservados.</p>
         </div>
       </footer>
     </div>
