--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,5 +8,12 @@ body {
   background-image: url('assets/Desktop.svg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   -webkit-font-smoothing: antialiased;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    background-position: top;
+  }
 }
